# python-project-50

./: .pyproject.toml.swp  Makefile  README.md  pyproject.toml
.github/workflows/: test_work.yml
gendiff/: __init__.py
gendiff/scripts/: .gendiff.py.swp  .genrecdiff.py.swp  .genrecursivediff.py.swn  .genrecursivediff.py.swo  .genrecursivediff.py.swp  .genreqdiff.py.swl  .genreqdiff.py.swm  .genreqdiff.py.swp  gendiff.py
tests/: .test_gendiff.py.swp  test_gendiff.py
tests/examples/: .filereq1.json.swp
